# Neo_social_robot_2026

./: README.md
QBoard1Firm/: ArduBot.cpp  ArduBot.h  L3G4200D.cpp  L3G4200D.h  LCD_Graphics.cpp  LCD_Graphics.h  LIS35DE.cpp  LIS35DE.h  QBoard1Firm.ino  README.md  comands.h  motores.h  serialProtocol.cpp  serialProtocol.h
ball_tracking_cpp/: README.md
head_tracker_cpp/: CMakeLists.txt
head_tracker_cpp/config/: head_tracker.yaml
head_tracker_cpp/src/: head_tracker_node.cpp
qbo_arduqbo/: CMakeLists.txt  arduqbo_setup.md  dynamixel_hardware_interface.md  dynamixel_setup.md  package.xml  qbo_dynamixels.md  udev-setup-qbo.md
qbo_arduqbo/config/: diagnostics_aggregator.yaml  dynamixel_config.yaml  qboards_config.yaml
qbo_arduqbo/include/qbo_arduqbo/: qbo_arduqbo.hpp_backup
qbo_arduqbo/include/qbo_arduqbo/cereal_port/: CerealPort.h
qbo_arduqbo/include/qbo_arduqbo/controllers/: audio_controller.hpp  base_controller.hpp  battery_controller.hpp  dynamixel_controller.hpp  dynamixel_hardware.hpp  dynamixel_hardware_old.hpp  imu_controller.hpp  lcd_controller.hpp  mouth_controller.hpp  nose_controller.hpp  sensor_controller.hpp
qbo_arduqbo/include/qbo_arduqbo/drivers/: arduqbo_instructions.h  dataUnion.h  i2c_bus_driver.hpp  qboduino_driver.h
qbo_arduqbo/launch/: qbo_full.launch.py
qbo_arduqbo/src/: dynamixel_hardware.cpp  qbo_arduqbo.cpp  qbo_arduqbo.cpp_backup  qbo_dynamixel.cpp  scan_dxl.py
qbo_arduqbo/src/cereal_port/: CerealPort.cpp
qbo_arduqbo/src/controllers/: audio_controller.cpp  base_controller.cpp  battery_controller.cpp  dynamixel_controller.cpp  dynamixel_hardware.cpp  dynamixel_hardware_backup.cpp  imu_controller.cpp  imu_controller.cpp_backup  lcd_controller.cpp  mouth_controller.cpp  nose_controller.cpp  sensor_controller.cpp
qbo_arduqbo/src/drivers/: arduqbo_instructions.cpp  i2c_bus_driver.cpp  qboduino_driver.cpp
qbo_bringup/: D435_setup.md  Doc_qbo_fr.md  Readme.md  Systemd_setup.md  package.xml  setup.cfg  setup.py
qbo_bringup/launch/: qbo_startup.launch.py
qbo_bringup/qbo_bringup/: smach.py
qbo_camera/launch/: invert_image_launch.py
qbo_games/: package.xml  readme.md  setup.cfg  setup.py
qbo_games/config/: config.yaml
qbo_games/qbo_games/: chifumi_video_test.py  qbo_chifumi.py
qbo_msgs/: CMakeLists.txt
