<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbo_bringup</name>
  <version>0.1.1</version>
  <description>
    The qbo_bringup package provides a unified launch system for bringing up the Qbo robot.
    It includes startup launch files that integrate hardware drivers, diagnostics, and
    audio nodes from the qbo_driver package. Additionally, it starts the smatch node,
    a central orchestrator responsible for monitoring and coordinating system startup,
    with future support planned for behavior management using SMACH.
  </description>
  <maintainer email="sylvain-zwolinski@orange.fr">qbo_ros2</maintainer>
  <author email="sylvain-zwolinski@orange.fr">zwolinski</author>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
